[package]
name = "redox-ssh"
version = "0.1.0"
authors = ["Thomas Gatzweiler <mail@thomasgatzweiler.com>"]

[lib]
name = "ssh"
path = "src/lib.rs"

[[bin]]
name = "ssh"
path = "src/bin/ssh.rs"
doc = false

[[bin]]
name = "sshd"
path = "src/bin/sshd.rs"
doc = false

[[bin]]
name = "ssh-keygen"
path = "src/bin/ssh-keygen.rs"
doc = false

[dependencies]
byteorder = "^1.5.0"
log = "^0.4.22"
num-bigint = "0.4.6"
rand = "^0.8.5"
rust-crypto = "^0.2.36"
rustc-serialize = "^0.3.25"

[target.'cfg(not(target_os = "redox"))'.dependencies]
libc = "^0.2.26" 

[target.'cfg(target_os = "redox")'.dependencies]
redox_syscall = "0.2"

