[package]
name = "redox-ssh"
version = "0.1.0"
edition = "2021"
authors = ["Thomas Gatzweiler <mail@thomasgatzweiler.com>"]

[lib]
name = "ssh"
path = "src/lib.rs"

[[bin]]
name = "ssh"
path = "src/bin/ssh.rs"
doc = false

[[bin]]
name = "sshd"
path = "src/bin/sshd.rs"
doc = false

[[bin]]
name = "ssh-keygen"
path = "src/bin/ssh-keygen.rs"
doc = false

[dependencies]
byteorder = "^1.5.0"
log = "^0.4.22"
num-bigint = "0.4.6"
rand = "^0.8.5"

# This crate is deprecated in favor of serde:
# rustc-serialize = "^0.3.25"
# Not updated for 8 years, depends and blocks build on Redox
# rust-crypto = "^0.2.36"

curve25519-dalek = "^4.1.3"
ed25519-dalek = { version = "^2.1.1", features = ["rand_core"] }
sha2 = { version = "^0.10.8" }
hmac = { version = "^0.12.1", features = ["std", "reset"] }
ctr = "^0.9.2"
aes = "^0.8.4"

[target.'cfg(not(target_os = "redox"))'.dependencies]
libc = "^0.2.159"

[target.'cfg(target_os = "redox")'.dependencies]
redox_syscall = "0.2"
